force-app/main/default/objects/Match_Performance__c/Match_Performance__c.object-meta.xml
<CustomObject>
    <label>Match Performance</label>
    <nameField>
        <label>Match Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Match Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>