force-app/main/default/objects/Match_Performance__c/fields/Overs_Bowled__c.field-meta.xml
<CustomField>
    <fullName>Overs_Bowled__c</fullName>
    <label>Overs Bowled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>