force-app/main/default/objects/Match_Performance__c/fields/Wickets_Taken__c.field-meta.xml
<CustomField>
    <fullName>Wickets_Taken__c</fullName>
    <label>Wickets Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>